--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
     <div id="loading"></div>
     <div id="wrapper">
       <button class="button button-outline" id="generate">Create new combination (space)</button>
-      <h1>Hello world</h1>
-      <h2>Hello world</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+      <span>&lt;h1&gt; + &lt;h2&gt; <a id="header-font" href=""></a></span> &
+      <span>&lt;p&gt; <a id="content-font" href=""></a></span>
+      <h1>I am Typographer</h1>
+      <h2>I'll help you generate cool font combos</h2>
+      <p><b>Google Fonts</b> makes it quick and easy for everyone to use web fonts, including professional designers and developers. We believe that everyone should be able to bring quality typography to their web pages and applications.</p>
+      <p>Our goal is to create a directory of web fonts for the world to use. Our API service makes it easy to add Google Fonts to a website in seconds. The service runs on Google's servers which are fast, reliable and tested. Google provides this service <b>free of charge</b>.</p>
+      <p>All of the fonts are <b>Open Source</b>. This means that you are free to share your favorites with friends and colleagues. You can even customize them for your own use, or collaborate with the original designer to improve them. And you can use them in every way you want, privately or commercially — in print, on your computer, or in your websites.</p>
       <hr/>
-      <p>&lt;h1&gt; + &lt;h2&gt; <a id="header-font" href=""></a></p>
-      <p>&lt;p&gt; <a id="content-font" href=""></a></p>
     </div>
   </body>
 </html>
