Change primary button to look cool

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div id="loading"></div>
     <div id="wrapper">
-      <button class="button button-outline" id="generate">Create new combination (space)</button>
+      <button class="button button-primary" id="generate">Create new combination (space)</button>
       <span>&lt;h1&gt; + &lt;h2&gt; <a id="header-font" href=""></a></span> &
       <span>&lt;p&gt; <a id="content-font" href=""></a></span>
       <h1 title="h1">I am Typographer</h1>
