Move the large font list to an JS object.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="reset.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+    <script type="text/javascript" src="fonts.js"></script>
     <script type="text/javascript" src="scripts.js"></script>
   </head>
   <body>
