Refactor to constructor pattern, add font-size randomizing

--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
     <script type="text/javascript" src="scripts.js"></script>
   </head>
   <body>
-    <div id="loading"></div>
     <div id="wrapper">
+      <!-- <button class="button button-primary" id="generate">+ Upvote</button> -->
       <button class="button button-primary" id="generate">Create new combination (space)</button>
-      <span>&lt;h1&gt; + &lt;h2&gt; <a id="header-font" href=""></a></span> &
-      <span>&lt;p&gt; <a id="content-font" href=""></a></span>
+      <!-- <button class="button button-primary" id="generate">- Downvote</button> -->
+      <div class="current-fonts">
+        <span>&lt;h1&gt; + &lt;h2&gt; <a id="header-font" href=""></a></span> &
+        <span>&lt;p&gt; <a id="content-font" href=""></a></span>
+      </div>
       <h1 title="h1">I am Typographer</h1>
       <h2 title="h2">I'll help you generate cool font combos</h2>
       <p title="p"><b>Google Fonts</b> makes it quick and easy for everyone to use web fonts, including <i>professional designers and developers</i>. We believe that everyone should be able to bring quality typography to their web pages and applications.</p>
       <p title="p">Our goal is to create a directory of web fonts for the world to use. Our API service makes it easy to add Google Fonts to a website in seconds. The service runs on Google's servers which are fast, reliable and tested. Google provides this service <b>free of charge</b>.</p>
       <p title="p">All of the fonts are <b>Open Source</b>. This means that you are free to share your favorites with friends and colleagues. You can even customize them for your own use, or collaborate with the original designer to improve them. And you can use them in every way you want, privately or commercially — in print, on your computer, or in your websites.</p>
-      <hr/>
     </div>
   </body>
 </html>
