--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.0.3/milligram.min.css">
     <link href="reset.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
-    <script type="text/javascript" src="fonts.js"></script>
-    <script type="text/javascript" src="scripts.js"></script>
   </head>
   <body>
     <div id="wrapper">
@@ -21,8 +18,8 @@
       <button class="button button-primary" id="generate">Create new combination (space)</button>
       <!-- <button class="button button-primary" id="generate">- Downvote</button> -->
       <div class="current-fonts">
-        <span>&lt;h1&gt; + &lt;h2&gt; <a id="header-font" href=""></a></span> &
-        <span>&lt;p&gt; <a id="content-font" href=""></a></span>
+        <span>&lt;h1&gt; + &lt;h2&gt; <a target="_blank" id="header-font" href=""></a></span> &
+        <span>&lt;p&gt; <a target="_blank" id="content-font" href=""></a></span>
       </div>
       <h1 title="h1">I am Typographer</h1>
       <h2 title="h2">I'll help you generate cool font combos</h2>
@@ -33,5 +30,8 @@
     <script src="//static.getclicky.com/js" type="text/javascript"></script>
     <script type="text/javascript">try{ clicky.init(100917218); }catch(e){}</script>
     <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100917218ns.gif" /></p></noscript>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+    <script type="text/javascript" src="fonts.js"></script>
+    <script type="text/javascript" src="scripts.js"></script>    
   </body>
 </html>
