Align buttons nicely

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
   </head>
   <body>
     <div id="wrapper">
-      <button data-bind="css: firstCss, text: firstLabel, click: lockFirst" class="button button-outline"></button>
-      <button data-bind="css: secondCss, text: secondLabel, click: lockSecond" class="button button-outline"></button>
-      <button data-bind="click: newCombination" class="button button-primary">New combination (n)</button>
-      <div class="current-fonts">
+      <table>
+        <tr>
+        <td><button data-bind="css: firstCss, text: firstLabel, click: lockFirst" class="button"></button></td>
+        <td><button data-bind="css: secondCss, text: secondLabel, click: lockSecond" class="button"></button></td>
+        <td><button data-bind="click: newCombination" class="button button-primary">New combination (n)</button></td>
+        </tr>
+      </table>
+      <div id="current-fonts">
         <span>&lt;h1&gt; + &lt;h2&gt; <a target="_blank" id="header-font" href=""></a></span> &amp;
         <span>&lt;p&gt; <a target="_blank" id="content-font" href=""></a></span>
       </div>
