Divide to folders

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="robots" content="noindex, nofollow"/>
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.0.3/milligram.min.css">
-    <link href="reset.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link href="styles/reset.css" rel="stylesheet">
+    <link href="styles/styles.css" rel="stylesheet">
   </head>
   <body>
     <div id="wrapper">
@@ -57,7 +57,7 @@
     <script type="text/javascript">try{ clicky.init(100917218); }catch(e){}</script>
     <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100917218ns.gif" /></p></noscript>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
-    <script type="text/javascript" src="fonts.js"></script>
-    <script type="text/javascript" src="scripts.js"></script>
+    <script type="text/javascript" src="js/fonts.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
